[수정] 보고서 생성(llm), 예측 분석 서비스 mockup 파일 생성 후 테스트 중 (장비 등록 시 불필요 이벤트 발생 수정중)